--- a/pockets/miniprogram.accordion/miniprogram_dist/panel.wxss
+++ b/pockets/miniprogram.accordion/miniprogram_dist/panel.wxss
@@ -1,12 +1,59 @@
 @import '../../@doraemon-ui/style/var.wxss';
 
+/*! inject:wxss:../../@doraemon-ui/style/color.wxss */
+.dora-color--light {
+  --dora-color-base: var(--dora-color-light, #f4f5f8)!important;
+  --dora-color-active: var(--dora-color-light-active, #d5d9e4)!important;
+  --dora-color-contrast: var(--dora-color-light-contrast, #000)!important
+}
+.dora-color--stable {
+  --dora-color-base: var(--dora-color-stable, #92949c)!important;
+  --dora-color-active: var(--dora-color-stable-active, #777a84)!important;
+  --dora-color-contrast: var(--dora-color-stable-contrast, #fff)!important
+}
+.dora-color--positive {
+  --dora-color-base: var(--dora-color-positive, #3880ff)!important;
+  --dora-color-active: var(--dora-color-positive-active, #055fff)!important;
+  --dora-color-contrast: var(--dora-color-positive-contrast, #fff)!important
+}
+.dora-color--calm {
+  --dora-color-base: var(--dora-color-calm, #3dc2ff)!important;
+  --dora-color-active: var(--dora-color-calm-active, #0ab2ff)!important;
+  --dora-color-contrast: var(--dora-color-calm-contrast, #fff)!important
+}
+.dora-color--balanced {
+  --dora-color-base: var(--dora-color-balanced, #2dd36f)!important;
+  --dora-color-active: var(--dora-color-balanced-active, #24a959)!important;
+  --dora-color-contrast: var(--dora-color-balanced-contrast, #fff)!important
+}
+.dora-color--energized {
+  --dora-color-base: var(--dora-color-energized, #ffc409)!important;
+  --dora-color-active: var(--dora-color-energized-active, #d5a200)!important;
+  --dora-color-contrast: var(--dora-color-energized-contrast, #000)!important
+}
+.dora-color--assertive {
+  --dora-color-base: var(--dora-color-assertive, #eb445a)!important;
+  --dora-color-active: var(--dora-color-assertive-active, #e41833)!important;
+  --dora-color-contrast: var(--dora-color-assertive-contrast, #fff)!important
+}
+.dora-color--royal {
+  --dora-color-base: var(--dora-color-royal, #8a63d2)!important;
+  --dora-color-active: var(--dora-color-royal-active, #6c3bc7)!important;
+  --dora-color-contrast: var(--dora-color-royal-contrast, #fff)!important
+}
+.dora-color--dark {
+  --dora-color-base: var(--dora-color-dark, #222428)!important;
+  --dora-color-active: var(--dora-color-dark-active, #0b0b0c)!important;
+  --dora-color-contrast: var(--dora-color-dark-contrast, #fff)!important
+}
+/*! endinject */
 .dora-accordion-panel__hd {
   position: relative;
   padding: 32rpx;
-  color: #000;
-  color: var(--dora-black);
-  background-color: #fff;
-  background-color: var(--dora-component-background-color);
+  color: var(--dora-black,#000);
+  color: var(--dora-black,#000);
+  background-color: var(--dora-component-background-color,#fff);
+  background-color: var(--dora-component-background-color,#fff);
   box-sizing: border-box;
   padding-right: 64rpx;
   width: auto;
@@ -24,10 +71,10 @@
   bottom: 0;
   right: 0;
   height: 1PX;
-  border-bottom: 1PX solid var(--dora-border-color-split,var(--dora-color-step-15));
-  border-bottom: 1PX solid var(--dora-border-color-split,var(--dora-color-step-15));
-  color: var(--dora-border-color-split,var(--dora-color-step-15));
-  color: var(--dora-border-color-split,var(--dora-color-step-15));
+  border-bottom: 1PX solid var(--dora-border-color-split,var(--dora-color-step-15,#d9d9d9));
+  border-bottom: 1PX solid var(--dora-border-color-split,var(--dora-color-step-15,#d9d9d9));
+  color: var(--dora-border-color-split,var(--dora-color-step-15,#d9d9d9));
+  color: var(--dora-border-color-split,var(--dora-color-step-15,#d9d9d9));
   transform-origin: 0 100%;
   transform: scaleY(.5);
   left: 0
@@ -58,10 +105,10 @@
 .dora-accordion-panel__bd {
   display: none;
   overflow: hidden;
-  background: #fff;
-  background: var(--dora-component-background-color);
-  color: rgba(0,0,0,.55);
-  color: rgba(var(--dora-text-color-rgb),.55);
+  background: var(--dora-component-background-color,#fff);
+  background: var(--dora-component-background-color,#fff);
+  color: rgba(var(--dora-text-color-rgb,0,0,0),.55);
+  color: rgba(var(--dora-text-color-rgb,0,0,0),.55);
   position: relative;
   padding: 32rpx
 }
@@ -71,10 +118,10 @@
   bottom: 0;
   right: 0;
   height: 1PX;
-  border-bottom: 1PX solid var(--dora-border-color-split,var(--dora-color-step-15));
-  border-bottom: 1PX solid var(--dora-border-color-split,var(--dora-color-step-15));
-  color: var(--dora-border-color-split,var(--dora-color-step-15));
-  color: var(--dora-border-color-split,var(--dora-color-step-15));
+  border-bottom: 1PX solid var(--dora-border-color-split,var(--dora-color-step-15,#d9d9d9));
+  border-bottom: 1PX solid var(--dora-border-color-split,var(--dora-color-step-15,#d9d9d9));
+  color: var(--dora-border-color-split,var(--dora-color-step-15,#d9d9d9));
+  color: var(--dora-border-color-split,var(--dora-color-step-15,#d9d9d9));
   transform-origin: 0 100%;
   transform: scaleY(.5);
   left: 0
