--- a/packages/miniprogram.safe-area/assets/variables.less
+++ b/packages/miniprogram.safe-area/assets/variables.less
@@ -3,8 +3,8 @@
 // SafeArea themes
 // -----------------------------
 @safe-area-prefix-cls: ~'@{dora-prefix}-safe-area';
-@safe-area-inset-top: 44PX;
+@safe-area-inset-top: var(--dora-safe-area-inset-top, 44PX);
 @safe-area-inset-right: 0;
-@safe-area-inset-bottom: 34PX;
+@safe-area-inset-bottom: var(--dora-safe-area-inset-bottom, 34PX);
 @safe-area-inset-left: 0;
-@safe-area-multiple: 1;
+@safe-area-multiple: var(--dora-safe-area-multiple, 1);
