--- a/packages/miniprogram.popup/assets/index.less
+++ b/packages/miniprogram.popup/assets/index.less
@@ -1,15 +1,16 @@
 @import "./variables.less";
 
 // Popup styles
+// @prop --z-index: The z-index of the popup
 // -----------------------------
 .@{popup-prefix-cls} {
+  --z-index: @popup-z-index;
   position: fixed;
-  z-index: @popup-z-index;
 
   &-body {
     position: fixed;
-    z-index: @popup-z-index;
-    background-color: @component-background;
+    z-index: var(--z-index);
+    background-color: @popup-background-color;
   }
 
   &--position-center &-body {
