--- a/packages/miniprogram.safe-area/assets/index.less
+++ b/packages/miniprogram.safe-area/assets/index.less
@@ -1,44 +1,44 @@
 @import "./variables.less";
 
 // SafeArea styles
-// @prop --safe-area-inset-top: Top distance of the safe-area
-// @prop --safe-area-inset-bottom: Bottom distance of the safe-area
-// @prop --safe-area-multiple: Display multiple of the safe-area
+// @prop --inset-top: Top distance of the safe-area
+// @prop --inset-bottom: Bottom distance of the safe-area
+// @prop --multiple: Display multiple of the safe-area
 // -----------------------------
 .@{safe-area-prefix-cls} {
-  --safe-area-inset-top: @safe-area-inset-top;
-  --safe-area-inset-bottom: @safe-area-inset-bottom;
-  --safe-area-multiple: @safe-area-multiple;
+  --inset-top: @safe-area-inset-top;
+  --inset-bottom: @safe-area-inset-bottom;
+  --multiple: @safe-area-multiple;
 
   display: block;
   width: 100%;
   box-sizing: border-box;
 
   &--position-top {
-    padding-top: calc(~"var(--safe-area-inset-top) * var(--safe-area-multiple)");
+    padding-top: calc(~"var(--inset-top) * var(--multiple)");
   }
 
   &--position-top&--supports {
     @supports (padding-top: constant(safe-area-inset-top)) {
-      padding-top: calc(~"constant(safe-area-inset-top) * var(--safe-area-multiple)");
+      padding-top: calc(~"constant(safe-area-inset-top) * var(--multiple)");
     }
 
     @supports (padding-top: env(safe-area-inset-top)) {
-      padding-top: calc(~"env(safe-area-inset-top) * var(--safe-area-multiple)");
+      padding-top: calc(~"env(safe-area-inset-top) * var(--multiple)");
     }
   }
 
   &--position-bottom {
-    padding-bottom: calc(~"var(--safe-area-inset-bottom) * var(--safe-area-multiple)");
+    padding-bottom: calc(~"var(--inset-bottom) * var(--multiple)");
   }
 
   &--position-bottom&--supports {
     @supports (padding-bottom: constant(safe-area-inset-bottom)) {
-      padding-bottom: calc(~"constant(safe-area-inset-bottom) * var(--safe-area-multiple)");
+      padding-bottom: calc(~"constant(safe-area-inset-bottom) * var(--multiple)");
     }
 
     @supports (padding-bottom: env(safe-area-inset-bottom)) {
-      padding-bottom: calc(~"env(safe-area-inset-bottom) * var(--safe-area-multiple)");
+      padding-bottom: calc(~"env(safe-area-inset-bottom) * var(--multiple)");
     }
   }
 }
