--- a/packages/miniprogram.safe-area/miniprogram_dist/index.wxss
+++ b/packages/miniprogram.safe-area/miniprogram_dist/index.wxss
@@ -3,42 +3,42 @@
 @import '../../@doraemon-ui/style/color.wxss';
 
 .dora-safe-area {
-  --safe-area-inset-top: 44PX;
-  --safe-area-inset-bottom: 34PX;
-  --safe-area-multiple: 1;
+  --inset-top: var(--dora-safe-area-inset-top, 44PX);
+  --inset-bottom: var(--dora-safe-area-inset-bottom, 34PX);
+  --multiple: var(--dora-safe-area-multiple, 1);
   display: block;
   width: 100%;
   box-sizing: border-box
 }
 .dora-safe-area--position-top {
-  padding-top: calc(var(--safe-area-inset-top) * var(--safe-area-multiple));
-  padding-top: calc(var(--safe-area-inset-top) * var(--safe-area-multiple))
+  padding-top: calc(var(--inset-top) * var(--multiple));
+  padding-top: calc(var(--inset-top) * var(--multiple))
 }
 @supports (padding-top:constant(safe-area-inset-top)) {
   .dora-safe-area--position-top.dora-safe-area--supports {
-    padding-top: calc(constant(safe-area-inset-top) * var(--safe-area-multiple));
-    padding-top: calc(constant(safe-area-inset-top) * var(--safe-area-multiple))
+    padding-top: calc(constant(safe-area-inset-top) * var(--multiple));
+    padding-top: calc(constant(safe-area-inset-top) * var(--multiple))
   }
 }
 @supports (padding-top:env(safe-area-inset-top)) {
   .dora-safe-area--position-top.dora-safe-area--supports {
-    padding-top: calc(env(safe-area-inset-top) * var(--safe-area-multiple));
-    padding-top: calc(env(safe-area-inset-top) * var(--safe-area-multiple))
+    padding-top: calc(env(safe-area-inset-top) * var(--multiple));
+    padding-top: calc(env(safe-area-inset-top) * var(--multiple))
   }
 }
 .dora-safe-area--position-bottom {
-  padding-bottom: calc(var(--safe-area-inset-bottom) * var(--safe-area-multiple));
-  padding-bottom: calc(var(--safe-area-inset-bottom) * var(--safe-area-multiple))
+  padding-bottom: calc(var(--inset-bottom) * var(--multiple));
+  padding-bottom: calc(var(--inset-bottom) * var(--multiple))
 }
 @supports (padding-bottom:constant(safe-area-inset-bottom)) {
   .dora-safe-area--position-bottom.dora-safe-area--supports {
-    padding-bottom: calc(constant(safe-area-inset-bottom) * var(--safe-area-multiple));
-    padding-bottom: calc(constant(safe-area-inset-bottom) * var(--safe-area-multiple))
+    padding-bottom: calc(constant(safe-area-inset-bottom) * var(--multiple));
+    padding-bottom: calc(constant(safe-area-inset-bottom) * var(--multiple))
   }
 }
 @supports (padding-bottom:env(safe-area-inset-bottom)) {
   .dora-safe-area--position-bottom.dora-safe-area--supports {
-    padding-bottom: calc(env(safe-area-inset-bottom) * var(--safe-area-multiple));
-    padding-bottom: calc(env(safe-area-inset-bottom) * var(--safe-area-multiple))
+    padding-bottom: calc(env(safe-area-inset-bottom) * var(--multiple));
+    padding-bottom: calc(env(safe-area-inset-bottom) * var(--multiple))
   }
 }
