--- a/packages/miniprogram.backdrop/miniprogram_dist/index.wxml
+++ b/packages/miniprogram.backdrop/miniprogram_dist/index.wxml
@@ -3,6 +3,6 @@
   in="{{ visible }}"
   classNames="{{ classNames }}"
   bind:click="onClick"
-  wrapStyle="{{ extStyle }}"
-  disableScroll
+  wrapStyle="{{ containerStyle }}"
+  disableScroll="{{ disableScroll }}
 />
