--- a/packages/miniprogram.icon/miniprogram_dist/index.wxml
+++ b/packages/miniprogram.icon/miniprogram_dist/index.wxml
@@ -1,6 +1,6 @@
 <view
   class="dora-class {{ classes.wrap }}"
-  style="{{ extStyle }}"
+  style="{{ containerStyle }}"
   hidden="{{ hidden }}"
   bindtap="onClick"
 />
