--- a/packages/miniprogram.popup/miniprogram_dist/index.wxss
+++ b/packages/miniprogram.popup/miniprogram_dist/index.wxss
@@ -4,12 +4,14 @@
 
 .dora-popup {
   --z-index: var(--dora-popup-z-index, var(--dora-component-z-index, 1000));
-  position: fixed
+  position: fixed;
+  z-index: var(--z-index);
+  z-index: var(--z-index)
 }
 .dora-popup-body {
   position: fixed;
-  z-index: var(--z-index);
-  z-index: var(--z-index);
+  z-index: calc(var(--z-index) + 10);
+  z-index: calc(var(--z-index) + 10);
   background-color: var(--dora-component-background-color,#fff);
   background-color: var(--dora-component-background-color,#fff)
 }
