--- a/packages/miniprogram.safe-area/miniprogram_dist/index.wxml
+++ b/packages/miniprogram.safe-area/miniprogram_dist/index.wxml
@@ -1,3 +1,3 @@
-<view class="dora-class {{ classes.wrap }}" style="{{ extStyle }}">
+<view class="dora-class {{ classes.wrap }}" style="{{ containerStyle }}">
   <slot></slot>
 </view>
