--- a/packages/miniprogram.backdrop/src/index.wxml
+++ b/packages/miniprogram.backdrop/src/index.wxml
@@ -4,5 +4,5 @@
   classNames="{{ classNames }}"
   bind:click="onClick"
   wrapStyle="{{ containerStyle }}"
-  disableScroll="{{ disableScroll }}
+  disableScroll="{{ disableScroll }}"
 />
